edited link colors to be more high contrast and fixed some activators in the cards

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
  * Made By MaterializeCSS.com
  */
 
+ .a {
+  color: #4e342e;
+ }
 .icon-block {
   padding: 0 15px;
 }
